invisible buttons no longer effect project div heights, should look better now on mobile

--- a/abgreen_portfolio/style.css
+++ b/abgreen_portfolio/style.css
@@ -110,6 +110,8 @@ h1 {
 .project-button {
     margin: 10px 0 0;
     font-family: sans-serif;
+    height: 0;
+    visibility: hidden;
 }
 
 .text-block {
